--- a/cn.zh-cn/API参考/设置云服务器元数据.md
+++ b/cn.zh-cn/API参考/设置云服务器元数据.md
@@ -1,8 +1,8 @@
-# 设置云服务器元数据<a name="ZH-CN_TOPIC_0077847902"></a>
+# 更新云服务器元数据<a name="ZH-CN_TOPIC_0077847902"></a>
 
 ## 功能介绍<a name="zh-cn_topic_0057973166_section2604713"></a>
 
-设置弹性云服务器的元数据信息。
+更新弹性云服务器的元数据信息。
 
 将删除目前弹性云服务器的所有元数据信息，并更新为请求参数中的值。
 
